# LiliaEngine-Sandbox

./: .gitignore  CMakeLists.txt  Makefile  README.md  commit_patch.txt
apps/lilia_app/: main.cpp
apps/lilia_engine/: main.cpp
examples/: main.cpp
include/lilia/: chess_types.hpp  constants.hpp  player_info.hpp
include/lilia/app/: app.hpp  game_session.hpp  mousepos.hpp
include/lilia/app/controller/: game_controller.hpp  game_controller_types.hpp  game_manager.hpp  input_manager.hpp  player.hpp  selection_manager.hpp  time_controller.hpp  uci_engine_player.hpp
include/lilia/app/domain/: game_record.hpp  outcome.hpp  replay_info.hpp  result_utils.hpp
include/lilia/app/engines/: builtin_bootstrap.hpp  builtin_engine_locator.hpp  engine_provisioner.hpp  engine_registry.hpp  platform_spawn.hpp  stockfish_downloader.hpp  uci_engine_process.hpp
include/lilia/app/session/: game_session.hpp
include/lilia/app/view/: mousepos.hpp
include/lilia/bot/: bot_info.hpp
include/lilia/chess/: board.hpp  chess_constants.hpp  chess_game.hpp  chess_types.hpp  compiler.hpp  game_state.hpp  magic_serializer.hpp  move.hpp  move_buffer.hpp  move_generator.hpp  move_helper.hpp  position.hpp  zobrist.hpp
include/lilia/chess/core/: bitboard.hpp  core_types.hpp  magic.hpp  piece_encoding.hpp  random.hpp
include/lilia/controller/: bot_player.hpp  game_controller.hpp  game_controller_types.hpp  game_manager.hpp  input_manager.hpp  mousepos.hpp  player.hpp  selection_manager.hpp  time_controller.hpp  uci_engine_player.hpp
include/lilia/controller/subsystems/: attack_system.hpp  board_input_system.hpp  clock_system.hpp  game_end_system.hpp  history_system.hpp  legal_move_cache.hpp  move_execution_system.hpp  premove_system.hpp  ui_event_system.hpp
include/lilia/engine/: bot_engine.hpp  config.hpp  engine.hpp  eval.hpp  eval_acc.hpp  eval_alias.hpp  eval_param_aliases.inc  eval_params.inc  eval_shared.hpp  move_buffer.hpp  move_list.hpp  move_order.hpp  search.hpp  search_position.hpp  see.hpp  thread_pool.hpp  transposition_table.hpp  tt5.hpp
include/lilia/engine/uci/: builtin_bootstrap.hpp  engine_registry.hpp  platform_spawn.hpp  uci_engine_process.hpp  uci_utils.hpp
include/lilia/model/: board.hpp  chess_game.hpp  fen_validator.hpp  game_state.hpp  magic_serializer.hpp  move.hpp  move_generator.hpp  move_helper.hpp  pgn_loader.hpp  pgn_parser.hpp  position.hpp  tt5.hpp  zobrist.hpp
include/lilia/model/analysis/: analysis_types.hpp  eco_opening_db.hpp  game_record.hpp  outcome.hpp  pgn_reader.hpp  replay_info.hpp  result_utils.hpp  san_notation.hpp
include/lilia/model/core/: bitboard.hpp  magic.hpp  model_types.hpp  random.hpp
include/lilia/protocol/uci/: uci.hpp  uci_helper.hpp
include/lilia/uci/: builtin_bootstrap.hpp  builtin_engine_locator.hpp  engine_provisioner.hpp  engine_registry.hpp  platform_spawn.hpp  stockfish_downloader.hpp  uci.hpp  uci_engine_process.hpp  uci_helper.hpp
include/lilia/view/: game_view.hpp  highlight_manager.hpp  modal_view.hpp  render_constants.hpp  start_screen.hpp
include/lilia/view/animation/: animation_manager.hpp  chess_animator.hpp  i_animation.hpp  move_animation.hpp  piece_placeholder_animation.hpp  promotion_select_animation.hpp  snap_to_square_animation.hpp  warning_animation.hpp
include/lilia/view/audio/: sound_effect.hpp  sound_manager.hpp
include/lilia/view/col_palette/: amethyst.hpp  color_palette.hpp
src/lilia/app/: app.cpp  game_session.cpp
src/lilia/app/controller/: game_controller.cpp  game_manager.cpp  input_manager.cpp  selection_manager.cpp  time_controller.cpp  uci_engine_player.cpp
src/lilia/app/domain/: replay_info.cpp
src/lilia/app/engines/: builtin_bootstrap.cpp  builtin_engine_locator.cpp  engine_provisioner.cpp  engine_registry.cpp  platform_spawn.cpp  stockfish_downloader.cpp  uci_engine_process.cpp
src/lilia/app/session/: game_session.cpp
src/lilia/bot/: bot_info.cpp
src/lilia/chess/: board.cpp  chess_game.cpp  magic.cpp  magic_serializer.cpp  move_generator.cpp  position.cpp
src/lilia/controller/: bot_player.cpp  game_controller.cpp  game_manager.cpp  input_manager.cpp  selection_manager.cpp  time_controller.cpp  uci_engine_player.cpp
src/lilia/controller/subsystems/: attack_system.cpp  board_input_system.cpp  clock_system.cpp  game_end_system.cpp  history_system.cpp  legal_move_cache.cpp  move_execution_system.cpp  premove_system.cpp  ui_event_system.cpp
src/lilia/engine/: bot_engine.cpp  engine.cpp  eval.cpp  eval_shared.cpp  search.cpp  search_position.cpp  see.cpp
src/lilia/engine/uci/: builtin_bootstrap.cpp  engine_registry.cpp  platform_spawn.cpp  uci_engine_process.cpp  uci_engine_process_posix.cpp  uci_engine_process_win.cpp
src/lilia/model/: chess_game.cpp  fen_validator.cpp  magic.cpp  magic_serializer.cpp  move_generator.cpp  pgn_loader.cpp  pgn_parser.cpp  position.cpp
src/lilia/model/analysis/: eco_opening_db.cpp  pgn_reader.cpp  replay_info.cpp  san_notation.cpp
src/lilia/protocol/uci/: uci.cpp
src/lilia/tools/texel/: CMakeLists.txt  README.md  texel_tuner.cpp
src/lilia/tools/texel/cmake/: fetch_stockfish.cmake.in
src/lilia/tools/texel/include/lilia/tools/texel/: common.hpp  dataset.hpp  prepared_cache.hpp  progress.hpp  texel_trainer.hpp
src/lilia/tools/texel/src/: common.cpp  main.cpp  options.cpp  prepared_cache.cpp  texel_trainer.cpp  uci_engine.cpp
src/lilia/uci/: builtin_bootstrap.cpp  builtin_engine_locator.cpp  engine_provisioner.cpp  engine_registry.cpp  platform_spawn.cpp  stockfish_downloader.cpp  uci.cpp  uci_engine_process.cpp
src/lilia/view/: board.cpp  clock.cpp  color_palette_manager.cpp  entity.cpp  eval_bar.cpp  game_view.cpp  piece_manager.cpp  player_info_view.cpp  promotion_manager.cpp  start_screen.cpp
tests/: tactical_quiet_test.cpp
tests/engine/: tactical_quiet_test.cpp
tools/texel/: CMakeLists.txt
tools/texel/include/lilia/tools/texel/: common.hpp  dataset.hpp  options.hpp  types.hpp  uci_engine.hpp  worker_pool.hpp
tools/texel/src/: common.cpp  dataset.cpp  texel_trainer.cpp
workflows/: release.yml
(+238 files in other folders)
